--- a/exporting_template.yml
+++ b/exporting_template.yml
@@ -1,5 +1,5 @@
 ---
-- name: Import AAP
+- name: Exporting template using awx.awx 
   hosts: 192.168.1.10
   vars:
       ansible_python_interpreter: /usr/bin/python3.9
